--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     window.$docsify = {
       name: '',
       repo: '',
-      homepage: 'CV.md',
+      homepage: 'README.md',
 // The following setting is only for Mathjax settings		      
       latex: {
           inlineMath   : [['$', '$'], ['\\(', '\\)']], // default
