Implement flexible-alerts plugin and add Week 1 lecture notes
- Add docsify-plugin-flexible-alerts to index.html with 4 custom types:
  LEM (Lemma), PROP (Proposition), EXA (Example), RMK (Remark)
- Create comprehensive Week 1 notes (matrix-arithmetic.md) covering:
  - Three views of AB=C (column, row, sum-of-rank-one)
  - Inverse matrices and properties
  - Row/column operations and elementary operations
  - Finding A^{-1} without augmented matrices
- Use colored alerts throughout for lemmas, propositions, examples, remarks
- Update course readme.md with link to new lecture notes

Co-Authored-By: engineer-agent <engineer@honeymath.ai>

--- a/index.html
+++ b/index.html
@@ -41,7 +41,31 @@
         	prerenderComments: true,                    // default
         	selectors: ['h1','h2','h3','h4','h5','h6','li','ul'], // default value
         	debug: false                               // default value
-    	}
+    	},
+	'flexible-alerts': {
+		style: 'flat',
+		// Custom alert types for mathematical content
+		lem: {
+			label: 'Lemma',
+			iconVisibility: 'hidden',
+			className: 'lemma'
+		},
+		prop: {
+			label: 'Proposition',
+			iconVisibility: 'hidden',
+			className: 'proposition'
+		},
+		exa: {
+			label: 'Example',
+			iconVisibility: 'hidden',
+			className: 'example'
+		},
+		rmk: {
+			label: 'Remark',
+			iconVisibility: 'hidden',
+			className: 'remark'
+		}
+	}
     }
   </script>
   <!-- Docsify v4 -->
@@ -75,6 +99,9 @@
 
 <!-- /atleastzero/docsify-accordify -->
 <!--script src="//unpkg.com/docsify-accordify/src/index.js"></script-->
+
+<!-- fzankl/docsify-plugin-flexible-alerts -->
+<script src="//unpkg.com/docsify-plugin-flexible-alerts"></script>
 
 <script>
 const script = document.createElement('script');
