Human blame AI: Update class names for custom alert types

--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
 		lem: {
 			label: 'Lemma',
 			iconVisibility: 'hidden',
-			className: 'lemma'
+			className: 'attention'
 		},
 		prop: {
 			label: 'Proposition',
 			iconVisibility: 'hidden',
-			className: 'proposition'
+			className: 'tip'
 		},
 		exa: {
 			label: 'Example',
 			iconVisibility: 'hidden',
-			className: 'example'
+			className: 'note'
 		},
 		rmk: {
 			label: 'Remark',
 			iconVisibility: 'hidden',
-			className: 'remark'
+			className: 'warning'
 		}
 	}
     }
