--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     window.$docsify = {
       name: '',
       repo: '',
+	  relativePath: true,
       homepage: 'README.md',
 // The following setting is only for Mathjax settings		      
       latex: {
