Comment out style property in flexible-alerts

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         	debug: false                               // default value
     	},
 	'flexible-alerts': {
-		style: 'flat',
+		//style: 'flat',
 		// Custom alert types for mathematical content
 		lem: {
 			label: 'Lemma',
